2005-03-07  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-account.c (exchange_account_new): Setting the
	porotcol based on OWA URL specified by the user, instead of use_ssl
	parameter. Since we don't have a SSL section now, use_ssl is getting
	lost when user does modifications to his account settings.
	Fixes #73202, #72834, #73017, #72836, and #72881

2005-03-06  Rajesh Ranjan  <rranjan@redhat.com>

	* configure.in: Added Hindi ALL_LINGUAS.

2005-03-05  Sushma Rai  <rsushma@novell.com>

	* camel/camel-exchange-provider.c: Added mail filters and junk mail
	filters settings to "Options" section in exchange_conf_entries[]
	structure so that they appear in receive options page.
	Fixes #73237

2005-02-28  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Bumped the version to 2.1.6
	* NEWS : Updated
	* Updated the po files and the docs

2005-02-28  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/exchange-hierarchy-webdav.c (scan_subtree): Removed an object
	getting unrefed twice. Fixed #73079
	* camel/camel-exchange-folder.c (class_init): There was a duplicate
	declaration for refresh_info

2005-02-28  Sushma Rai  <rsushma@novell.com>
	
	* lib/e2k-autoconfig.c (validate): Reverted fix for #72514, as it
	breaks string freeze.

2005-02-28  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-config-listener.c (account_changed): Checks if
	user needs to authenticate again, based on the url changes.
	(requires_relogin): Compares the current url with the modified 
	url, to see if user needs to relogin.

2005-02-28  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-oof.c (sync_oof_info): Checking for NULL OOF 
	message. Fixes the crash when oof_info file gets created here.

2005-02-28  Sarfraaz Ahmed <asarfraaz@novell.com>

	* exchange-oof.h (exchange_oof_set) : This got missed in the previous 
	commit.

2005-02-27  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-oof.c (sync_oof_info): If oof_info file exists and